<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="185dp" >
	    
	<ImageView
	    android:layout_width="fill_parent"
	    android:layout_height="185dp"
	    android:orientation="vertical"
	    android:scaleType="fitXY"
	    android:contentDescription="@string/mini_background_description"
	    android:src="@drawable/bg_mini" >

	</ImageView>
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="185dp"
	    android:orientation="vertical" >
	
	    <ImageView
	        android:layout_width="fill_parent"
	        android:layout_height="100dp"
	        android:layout_marginBottom="15sp"
	        android:layout_marginLeft="96sp"
	        android:layout_marginRight="64sp"
	        android:layout_marginTop="15sp"
	        android:adjustViewBounds="true"
	        android:contentDescription="@string/quit_dialog_header_description"
	        android:src="@drawable/quit_dialog" />
	    
	    <LinearLayout
	        android:layout_width = "fill_parent"
	        android:layout_height = "40sp"
	        android:orientation = "horizontal"
	        android:gravity="center_horizontal|center_vertical" >
	        
	        <ImageView
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:layout_weight="1"
	            android:onClick="finish"
	            android:contentDescription="@string/yes_button_image"
	            android:src="@drawable/yes" />
	        
	        <ImageView 
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"
	            android:layout_weight = "1"
	            android:onClick="close_quit_dialog"
	            android:contentDescription="@string/no_button_image"
	            android:src = "@drawable/no" />
	        
	    </LinearLayout>
	</LinearLayout>
</FrameLayout>