<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gf_root_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/player_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
	    android:gravity="center_horizontal|center_vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/player_x_image"
            android:scaleType="fitCenter"
            android:src="@drawable/player_x" />
		
        <LinearLayout 
		    android:id="@+id/bcd1"
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:orientation="horizontal">
		    <TextView
		        android:id="@+id/X"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/zero"
		        android:textSize="20sp" />
		</LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/player_o"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
	    android:gravity="center_horizontal|center_vertical" >

        <ImageView
            android:id="@+id/ImageView2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/player_o_image"
            android:scaleType="fitCenter"
            android:src="@drawable/player_o" />
		<LinearLayout 
		    android:id="@+id/bcd2"
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:orientation="horizontal">
		    <TextView
		        android:id="@+id/Y"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/zero"
		        android:textSize="20sp" />
		</LinearLayout>
	</LinearLayout>

    <!-- Вместо 0dip было match_parent!!! -->
	<LinearLayout
	    android:id="@+id/cont"
	    android:layout_weight="1"
	    android:layout_height="0dip"
	    android:layout_width="match_parent"
	    android:orientation="horizontal" >
	  
	</LinearLayout>
	
	<ImageView
	    android:id="@+id/imageView3"
	    android:layout_width="60dp"
	    android:layout_height="60dp"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginBottom="30dp"
	    android:clickable="true"
	    android:contentDescription="@string/question_button_image"
	    android:onClick="helpRequested"
	    android:src="@drawable/question" />

</LinearLayout>